--- a/MatZip/WebContent/res/css/common.css
+++ b/MatZip/WebContent/res/css/common.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+@font-face {
+     font-family: 'S-CoreDream-8Heavy';
+     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-8Heavy.woff') format('woff');
+     font-weight: normal;
+     font-style: normal;
+}
+
+* {
+	box-sizing: border-box;
+	font-family: 'S-CoreDream-8Heavy', sans-serif;
+	font-size: 1em;
+}
 
 html, body {
 	padding: 0;
@@ -7,9 +19,69 @@ html, body {
 	height: 100%;
 }
 
+a {
+	color: black;
+	text-decoration: none;
+}
+
+.mL5 {
+	margin-left: 5px;
+}
+
+.mL10 {
+	margin-left: 10px;
+}
+
+.mL15 {
+	margin-left: 15px;
+}
+
 #container {
+	display: flex;
+	flex-direction: column;
 	width: 100%;
 	height: 100%;
+}
+
+#container > header {
+	background-color: #fdbdb8;
+	display: flex; height : 60px;
+	padding: 10px;
+	height: 60px;
+}
+
+#container > header > #headerLeft {
+	flex-grow: 1;
+	display: flex;
+	align-items: center;
+}
+
+#container > header > #headerLeft > #headerLogout > a {
+	color: #ba3f1f;
+}
+
+#container > header > #headerRight {
+	align-items: center;
+	display: flex;
+	flex-grow: 1;
+	justify-content: flex-end;
+	padding-right:10px;
+}
+
+#container > section {
+	flex-grow: 1;
+	display: flex;
+	justify-content: flex-end;
+}
+
+#container > footer {
+	align-items: center;
+	background-color: #ced5df;
+	color: white;
+	display: flex;
+	flex-grow: 50px;
+	justify-content: center;
+	padding: 10px;
 }
 
 #sectionContainerCenter {
@@ -18,6 +90,18 @@ html, body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+}
+
+.containerPImg {
+	width: 20px;
+	height: 20px;
+	display: inline-block;
+}
+
+.pImg {
+	width: 20px;
+	height: 20px;
+	border-radius: 50%;
 }
 
 .frm {
