--- a/MatZip/WebContent/res/css/common.css
+++ b/MatZip/WebContent/res/css/common.css
@@ -11,6 +11,10 @@
 	font-family: 'InfinitySans-RegularA1', sans-serif;
 }
 
+*:focus {
+	outline:none;
+}
+
 html, body {
 	padding: 0;
 	margin: 0;
@@ -127,7 +131,27 @@ a {
 
 .frm {
 	padding: 15px;
-	border: 1px solid #ecdaf6;
+}
+
+.frm > div > input {
+	border: 2px solid #f9a946;
+	border-radius: 7px;
+	height: 30px;
+	margin-bottom: 15px;
+	width: 200px;
+}
+
+.frm > div > input:-webkit-autofill {
+   -webkit-box-shadow: 0 0 0 1000px white inset;
+}
+
+.frm > div > button {
+	background: #f9a946;
+	border: none;
+	border-radius: 7px;
+	color: white;
+	height: 30px;
+	width: 75px;
 }
 
 .msg {
