--- a/MatZip/WebContent/res/css/common.css
+++ b/MatZip/WebContent/res/css/common.css
@@ -96,7 +96,7 @@ a {
 #container > section {
 	flex-grow: 1;
 	display: flex;
-	justify-content: flex-end;
+	justify-content: center;
 }
 
 #container > footer {
@@ -111,7 +111,6 @@ a {
 
 #sectionContainerCenter {
 	width: 100%;
-	height: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -157,3 +156,4 @@ a {
 .msg {
 	color: red;
 }
+
