--- a/MatZip/WebContent/res/css/restaurant.css
+++ b/MatZip/WebContent/res/css/restaurant.css
@@ -38,3 +38,36 @@
 .recMenuContainer > .recMenuItem > .info > .delIconContainer > span > i {
 	color: #fdfdfd;
 }
+
+.menuList {
+	display: flex;
+	height: 70px;
+}
+
+.menuList .menuItem {
+	display: inline-block;
+	width: 70px;
+	height: 70px;
+	color: white;
+}
+
+.menuList .menuItem:not(:first-child) {
+	margin-left: 4px;
+}
+
+.menuList .menuItem img {
+	width: 100%;
+	height: 100%;
+}
+
+.menuList .menuItem .moreCnt {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.restaurant-detail {
+	padding: 5px 0 10px 0;
+}
